[gd_scene load_steps=12 format=3 uid="uid://c635mkpjm5xgl"]

[ext_resource type="Script" path="res://Player.gd" id="1_ifuu7"]
[ext_resource type="Script" path="res://Gun.gd" id="3_gn4og"]
[ext_resource type="PackedScene" uid="uid://dheutwpacdmaw" path="res://bullet.tscn" id="4_qpkyl"]
[ext_resource type="Texture2D" uid="uid://dbklgiq3sd1fm" path="res://Assests/2. Arrow Right.png" id="4_rlks5"]
[ext_resource type="PackedScene" uid="uid://cfu01df35rxhb" path="res://rpg.tscn" id="4_tk8du"]
[ext_resource type="Script" path="res://Enemy_Spawner.gd" id="5_xb5fs"]
[ext_resource type="PackedScene" uid="uid://bgulyyvo7kl3e" path="res://circle_ability.tscn" id="6_eeqp8"]
[ext_resource type="Texture2D" uid="uid://becj8xj7tvt8w" path="res://Assests/Basic Asset Pack/basic magical animations/novice pyromancer/NovicePyromancer.png" id="7_6c4rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w333t"]
size = Vector2(34, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx22g"]
size = Vector2(36, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_p4bor"]
radius = 37.0135

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ifuu7")
max_speed = 500.0
friction = 2000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_w333t")

[node name="Gun" type="Node2D" parent="."]
script = ExtResource("3_gn4og")
bullet_scn = ExtResource("4_qpkyl")
bullet_speed = 2500.0
rpg_scn = ExtResource("4_tk8du")

[node name="muzzle" type="Node2D" parent="Gun"]
position = Vector2(-3, 0)

[node name="Sprite2D" type="Sprite2D" parent="Gun/muzzle"]
position = Vector2(32, 0)
texture = ExtResource("4_rlks5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Gun"]
pitch_scale = 1.64

[node name="muzzle2" type="Node2D" parent="Gun"]
position = Vector2(-37, 0)

[node name="Enemy_Spawner" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Enemy_Spawner"]
visible = false
script = ExtResource("5_xb5fs")

[node name="Enemy_Check" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Check"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_jx22g")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -35.0
offset_top = -27.0
offset_right = 38.0
offset_bottom = -21.0
step = 0.1
show_percentage = false

[node name="Kill_Count" type="Label" parent="."]
offset_left = 86.0
offset_top = 137.0
offset_right = 126.0
offset_bottom = 160.0
text = "Kills:"

[node name="attack_boost" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attack_boost_timer" type="Label" parent="."]
offset_left = 166.0
offset_top = 137.0
offset_right = 246.0
offset_bottom = 160.0
text = "Time_left :"

[node name="speed_Label" type="Label" parent="."]
offset_left = 169.0
offset_top = 102.0
offset_right = 209.0
offset_bottom = 125.0

[node name="speed_boost" type="Timer" parent="."]
wait_time = 3.0

[node name="magnet_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Level" type="ProgressBar" parent="."]
modulate = Color(0.760784, 0.298039, 0.631373, 1)
offset_left = -110.0
offset_top = 157.0
offset_right = -95.0
offset_bottom = 270.0
rotation = -1.56907
scale = Vector2(1.08096, 1.33747)
fill_mode = 2
show_percentage = false

[node name="Pickupradius" type="Area2D" parent="." groups=["pickup_radius"]]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickupradius"]
shape = SubResource("CircleShape2D_p4bor")

[node name="Circle_ability" parent="." instance=ExtResource("6_eeqp8")]

[node name="Timer_splash" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Free_splash" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("7_6c4rb")
hframes = 4

[connection signal="area_entered" from="Enemy_Check" to="." method="_on_enemy_check_area_entered"]
[connection signal="area_exited" from="Enemy_Check" to="." method="_on_enemy_check_area_exited"]
[connection signal="timeout" from="attack_boost" to="." method="_on_attack_boost_timeout"]
[connection signal="timeout" from="speed_boost" to="." method="_on_speed_boost_timeout"]
[connection signal="timeout" from="magnet_timer" to="." method="_on_magnet_timer_timeout"]
[connection signal="area_entered" from="Pickupradius" to="." method="_on_pickupradius_area_entered"]
[connection signal="timeout" from="Timer_splash" to="." method="_on_timer_splash_timeout"]
[connection signal="timeout" from="Free_splash" to="." method="_on_free_splash_timeout"]
